# web-mess

./: .gitignore  build.sh  default.nix  esbuild.code-workspace  package-lock.json  package.json  server.sh  web-mess.code-workspace
client/: babylon.ts  main.css  main.ts  monaco.ts  testSpan.ts  tsconfig.json
client/testData/: testSpan.ts
client/tracing/: datadogTrace.ts  traceViewer.ts
client/utils/: signal.ts
rust_hyper/: Cargo.toml
rust_server/: Cargo.toml
rust_server/src/: main.rs
server/: build.sh  buildClient.ts  importMap.json  import_map.json  main.ts  server.sh  server.ts  types.ts
server/config/: https.crt  https.key
server/modules/: pagesServer.ts  staticFilesServer.ts
server/pages/: index.html  index.ts
